[gd_scene load_steps=8 format=3 uid="uid://cebrnqmufuday"]

[ext_resource type="Script" uid="uid://b10rjbtnb156o" path="res://script/weapon.gd" id="1_51ewx"]
[ext_resource type="Texture2D" uid="uid://btxnd3ocjkjr5" path="res://models/guns/blaster-f.png" id="2_708ic"]
[ext_resource type="Texture2D" uid="uid://cirhb6oxoogyb" path="res://models/guns/blaster-h.png" id="3_b7xv7"]
[ext_resource type="Texture2D" uid="uid://fol412y40yuc" path="res://models/guns/blaster-d.png" id="4_qun7j"]

[sub_resource type="Animation" id="Animation_b7cqr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponMesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_51ewx"]
resource_name = "shoot"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponMesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.05), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p5e06"]
_data = {
&"RESET": SubResource("Animation_b7cqr"),
&"shoot": SubResource("Animation_51ewx")
}

[node name="Weapon" type="Node3D"]
script = ExtResource("1_51ewx")

[node name="WeaponMesh" type="MeshInstance3D" parent="."]

[node name="fireSound" type="AudioStreamPlayer3D" parent="."]

[node name="reloadSound" type="AudioStreamPlayer3D" parent="."]

[node name="EmptyAmo" type="AudioStreamPlayer3D" parent="."]

[node name="AnimationShoot" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_p5e06")
}

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.318436)

[node name="HudWeapon" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="HudWeapon"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AmounAmo" type="Label" parent="HudWeapon/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -21.5
offset_top = -23.0
offset_right = 21.5
grow_horizontal = 2
grow_vertical = 0

[node name="NameWapon" type="Label" parent="HudWeapon/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 56.0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="HudWeapon/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 154.0
grow_horizontal = 2
alignment = 1

[node name="1" type="VBoxContainer" parent="HudWeapon/Control/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HudWeapon/Control/HBoxContainer/1"]
layout_mode = 2

[node name="Panel" type="Panel" parent="HudWeapon/Control/HBoxContainer/1/MarginContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2

[node name="SlotNumber" type="Label" parent="HudWeapon/Control/HBoxContainer/1/MarginContainer/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "1"

[node name="MarginContainer" type="MarginContainer" parent="HudWeapon/Control/HBoxContainer/1/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="HudWeapon/Control/HBoxContainer/1/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HudWeapon/Control/HBoxContainer/1/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="HudWeapon/Control/HBoxContainer/1/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HudWeapon/Control/HBoxContainer/1/MarginContainer/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
texture = ExtResource("2_708ic")

[node name="WeaponName" type="Label" parent="HudWeapon/Control/HBoxContainer/1/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sniper M"

[node name="2" type="VBoxContainer" parent="HudWeapon/Control/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HudWeapon/Control/HBoxContainer/2"]
layout_mode = 2

[node name="Panel" type="Panel" parent="HudWeapon/Control/HBoxContainer/2/MarginContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2

[node name="SlotNumber" type="Label" parent="HudWeapon/Control/HBoxContainer/2/MarginContainer/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "2"

[node name="MarginContainer" type="MarginContainer" parent="HudWeapon/Control/HBoxContainer/2/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="HudWeapon/Control/HBoxContainer/2/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HudWeapon/Control/HBoxContainer/2/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="HudWeapon/Control/HBoxContainer/2/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HudWeapon/Control/HBoxContainer/2/MarginContainer/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
texture = ExtResource("3_b7xv7")

[node name="WeaponName" type="Label" parent="HudWeapon/Control/HBoxContainer/2/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Piou Piou"

[node name="3" type="VBoxContainer" parent="HudWeapon/Control/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HudWeapon/Control/HBoxContainer/3"]
layout_mode = 2

[node name="Panel" type="Panel" parent="HudWeapon/Control/HBoxContainer/3/MarginContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2

[node name="SlotNumber" type="Label" parent="HudWeapon/Control/HBoxContainer/3/MarginContainer/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "3"

[node name="MarginContainer" type="MarginContainer" parent="HudWeapon/Control/HBoxContainer/3/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="HudWeapon/Control/HBoxContainer/3/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HudWeapon/Control/HBoxContainer/3/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="HudWeapon/Control/HBoxContainer/3/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HudWeapon/Control/HBoxContainer/3/MarginContainer/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
texture = ExtResource("4_qun7j")

[node name="WeaponName" type="Label" parent="HudWeapon/Control/HBoxContainer/3/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "brll brll !"
